--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
-    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username=\"\", password = \"\")"
+    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01365c008c064d4ea95e6db18b943852",
+       "model_id": "cc786c7bd6424d7d95d0eb7235c908c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-11f8db3f-45b1-4d53-b469-f843e8e1e586\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-cd389955-3a69-4c8a-bf2a-4a19aa801001\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -257,7 +257,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e9b66dca4d44af6b475111763a85ec2",
+       "model_id": "612990f97bfb448b9274a817bfe7a577",
        "version_major": 2,
        "version_minor": 0
       },
