Create Images directory in code

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -21,12 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
     "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if not os.path.exists(\"Images\"):\n",
+    "        os.makedirs(\"Images\")"
    ]
   },
   {
@@ -143,7 +154,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import glob\n",
     "import re\n",
     "import requests\n",
@@ -231,7 +241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc786c7bd6424d7d95d0eb7235c908c2",
+       "model_id": "ba683835231c4c1299725afbca52e699",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +255,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-cd389955-3a69-4c8a-bf2a-4a19aa801001\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-fc207346-4d72-4a47-8e56-a5f0766b3ae6\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -257,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "612990f97bfb448b9274a817bfe7a577",
+       "model_id": "62d09633c4904d269894c39696982764",
        "version_major": 2,
        "version_minor": 0
       },
