Add local file download tab

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "if not os.path.exists(\"Images\"):\n",
-    "        os.makedirs(\"Images\")"
+    "    os.makedirs(\"Images\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,44 +113,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "group_name = \"\"\n",
+    "group_data = pd.DataFrame()\n",
     "def move_to_group(group):\n",
-    "    group_data = groups_features[groups_features[\"Group Name\"] == group]\n",
+    "    global group_data\n",
+    "    group_data = data[data[\"Group Name\"] == group]\n",
     "    latitude = group_data[\"latitude\"].iloc[0]\n",
     "    longitude = group_data[\"longitude\"].iloc[0]\n",
     "    map.center = [latitude, longitude]\n",
-    "    return group_data\n",
+    "    \n",
     "    \n",
     "def select_group(group):\n",
-    "    global group_name \n",
+    "    global group_name, group_data \n",
     "    group_name = group\n",
-    "    group_data = move_to_group(group)\n",
+    "    move_to_group(group)\n",
     "    display(group_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "stored_threshold = 10\n",
     "def get_groups(threshold = 10):\n",
+    "    global stored_threshold\n",
+    "    stored_threshold = threshold\n",
     "    process_data(threshold)\n",
     "    update_map()\n",
     "    display(interactive(select_group, group = groups_features[\"Group Name\"].unique()))\n",
-    "    \n",
-    "\n",
     "\n",
     "threshold_modifier = interactive(get_groups, threshold = (0, 200))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download_groups(_):\n",
+    "    with download_out:\n",
+    "        global stored_threshold, data\n",
+    "        filename = f\"Groups-{stored_threshold}.csv\"\n",
+    "        print(f\"Saving Groups CSV as {filename}\")\n",
+    "        data.to_csv(filename)\n",
+    "        print(\"Finished saving file\")\n",
+    "    \n",
+    "download_button = widgets.Button(description='Download Data')\n",
+    "download_out = widgets.Output()\n",
+    "\n",
+    "# linking button and function together using a button's method\n",
+    "download_button.on_click(download_groups)\n",
+    "\n",
+    "# create download widget\n",
+    "\n",
+    "download_button = widgets.VBox([download_button, download_out])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,13 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba683835231c4c1299725afbca52e699",
+       "model_id": "a73a4a173bd54210bb55d69be1e49575",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +283,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-fc207346-4d72-4a47-8e56-a5f0766b3ae6\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-7d083f50-827e-4e7f-aadf-3be2af4bde4e\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -267,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62d09633c4904d269894c39696982764",
+       "model_id": "3b47dc03991640cbb2c50b29751f3bcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,10 +308,11 @@
     }
    ],
    "source": [
-    "tabs = widgets.Tab(children = [threshold_modifier, button])\n",
+    "tabs = widgets.Tab(children = [threshold_modifier, button, download_button])\n",
     "\n",
     "tabs.set_title(0, \"Threshold Selection\")\n",
     "tabs.set_title(1, \"Photo Downloader\")\n",
+    "tabs.set_title(2, \"Data Download\")\n",
     "\n",
     "\n",
     "update_map()\n",
