Add deletion and fix map update

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,13 @@
     "layer = FeatureLayer(mhm_url)\n",
     "\n",
     "df = layer.query(where = \"protocol = 'mosquito_habitat_mapper'\").sdf\n",
-    "data = pd.DataFrame()"
+    "data = pd.DataFrame()\n",
+    "removed_groups = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import geopandas as gpd\n",
+    "from arcgis.features import GeoAccessor\n",
+    "from arcgis.features import SpatialDataFrame\n",
+    "from arcgis.geoenrichment import enrich\n",
+    "from arcgis.raster import ImageryLayer\n",
+    "from arcgis.geometry import Geometry\n",
+    "\n",
+    "groups_features = pd.DataFrame()\n",
+    "def remove_groups():\n",
+    "    global data, removed_groups\n",
+    "    for removed_group in removed_groups:\n",
+    "        data = data[data[\"Group Data\"] != removed_group]\n",
+    "        \n",
     "def process_data(threshold):\n",
-    "    global df, data\n",
+    "    global df, data, removed_groups, groups_features\n",
     "    suspect_df = df.groupby(by=['measuredDate','latitude','mosquitohabitatmapperWaterSou_2','siteName','longitude']).filter(lambda x: len(x) > threshold)\n",
     "\n",
     "    # identify groups\n",
@@ -64,71 +78,68 @@
     "        group_num += 1\n",
     "        groups_data = groups_data.append(new_df, ignore_index = True)\n",
     "    data = groups_data\n",
-    "\n",
-    "process_data(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from arcgis.features import FeatureLayerCollection\n",
-    "import geopandas as gpd\n",
-    "from arcgis.features import GeoAccessor\n",
-    "from IPython.display import display, clear_output\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "from arcgis.features import SpatialDataFrame\n",
-    "from arcgis.geoenrichment import enrich\n",
-    "from arcgis.raster import ImageryLayer\n",
-    "from arcgis.geometry import Geometry\n",
-    "\n",
-    "map = gis.map('MHM Groups')\n",
-    "groups_features = pd.DataFrame()\n",
-    "\n",
-    "def update_group_data():\n",
-    "    global data\n",
-    "    global groups_features\n",
+    "    remove_groups()\n",
     "    geojson_data = data.drop(columns = [\"SHAPE\"])\n",
     "\n",
     "    gdf = gpd.GeoDataFrame(\n",
     "        geojson_data, geometry=gpd.points_from_xy(geojson_data.longitude, geojson_data.latitude))\n",
     "    gdf.mosquitohabitatmapperComments.replace({r'[^\\x00-\\x7F]+':''}, regex=True, inplace=True)\n",
     "    groups_features = GeoAccessor.from_geodataframe(gdf)\n",
-    "    \n",
-    "def update_map():\n",
-    "    map.remove_layers()\n",
-    "    try:\n",
-    "        update_group_data()\n",
-    "        groups_features.spatial.plot(map_widget = map)\n",
-    "        \n",
-    "    except KeyError:\n",
-    "        print(\"no such group exists\")\n",
-    "    map.basemap = 'dark-gray-vector'\n",
-    "    \n",
-    "update_map()"
+    "    groups_features = groups_features[['latitude', 'longitude', 'mosquitohabitatmapperLarvaeCoun']]\n",
+    "process_data(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from arcgis.features import FeatureLayerCollection\n",
+    "from IPython.display import display, clear_output\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "\n",
+    "\n",
+    "m1 = gis.map('MHM Groups')\n",
+    "\n",
+    "\n",
+    "def add_layer(map_obj):\n",
+    "    map_obj.basemap = 'dark-gray-vector'\n",
+    "    try:\n",
+    "        global groups_features\n",
+    "        groups_layer = groups_features.spatial.to_featurelayer(\"MHM Groups\")\n",
+    "        map_obj.add_layer(groups_layer)\n",
+    "    except KeyError:\n",
+    "        print(\"no such group exists\")\n",
+    "    \n",
+    "def update_map():\n",
+    "    global m1\n",
+    "    m1.remove_layers()\n",
+    "    add_layer(m1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "group_name = \"\"\n",
     "group_data = pd.DataFrame()\n",
     "def move_to_group(group):\n",
-    "    global group_data\n",
-    "    group_data = data[data[\"Group Name\"] == group]\n",
-    "    latitude = group_data[\"latitude\"].iloc[0]\n",
-    "    longitude = group_data[\"longitude\"].iloc[0]\n",
-    "    map.center = [latitude, longitude]\n",
+    "    global group_data, m1\n",
+    "    if group != \"None\":\n",
+    "        group_data = data[data[\"Group Name\"] == group]\n",
+    "        latitude = group_data[\"latitude\"].iloc[0]\n",
+    "        longitude = group_data[\"longitude\"].iloc[0]\n",
+    "        m1.center = [latitude, longitude]\n",
+    "    else:\n",
+    "        group_data = pd.DataFrame()\n",
     "    \n",
-    "    \n",
+    "       \n",
     "def select_group(group):\n",
-    "    global group_name, group_data \n",
+    "    global group_name, group_data, selected_group\n",
     "    group_name = group\n",
     "    move_to_group(group)\n",
     "    display(group_data)\n"
@@ -136,24 +147,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "stored_threshold = 10\n",
-    "def get_groups(threshold = 10):\n",
-    "    global stored_threshold\n",
-    "    stored_threshold = threshold\n",
-    "    process_data(threshold)\n",
-    "    update_map()\n",
-    "    display(interactive(select_group, group = groups_features[\"Group Name\"].unique()))\n",
+    "threshold_output = widgets.Output()\n",
+    "deleted_length = len(removed_groups)\n",
     "\n",
-    "threshold_modifier = interactive(get_groups, threshold = (0, 200))"
+    "@threshold_output.capture(clear_output=True, wait=True)\n",
+    "def get_groups(threshold):\n",
+    "    global stored_threshold, deleted_length\n",
+    "    if stored_threshold != threshold or deleted_length != len(removed_groups):\n",
+    "        stored_threshold = threshold\n",
+    "        deleted_length = len(removed_groups)\n",
+    "        process_data(stored_threshold)\n",
+    "        update_map()\n",
+    "    options = data[\"Group Name\"].unique().tolist()\n",
+    "    options.insert(0, \"None\")\n",
+    "    display(interactive(select_group, group = options))\n",
+    "    \n",
+    "\n",
+    "\n",
+    "threshold_modifier = widgets.VBox([interactive(get_groups, threshold = widgets.IntSlider(10, 1, 100, continuous_update = False)), threshold_output])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +193,12 @@
     "download_button.on_click(download_groups)\n",
     "\n",
     "# create download widget\n",
-    "\n",
     "download_button = widgets.VBox([download_button, download_out])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,9 +249,6 @@
     "        done = int(50 * dl / total_length)\n",
     "        sys.stdout.write(\"\\r[%s%s]\" % ('=' * done, ' ' * (50-done)) )    \n",
     "        sys.stdout.flush()\n",
-    "        \n",
-    "\n",
-    "\n",
     "\n",
     "def download_photos(_):\n",
     "    # \"linking function with output\"\n",
@@ -239,7 +256,7 @@
     "        # what happens when we press the button\n",
     "        clear_output()\n",
     "        print(\"Downloading Photos:\")\n",
-    "        get_pictures(groups_features[groups_features[\"Group Name\"] == group_name])\n",
+    "        get_pictures(data[data[\"Group Name\"] == group_name])\n",
     "        print(' Finished Downloading!')\n",
     "        \n",
     "        photo_displayer = interactive(show_images, file=os.listdir('Images/')) \n",
@@ -248,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,13 +280,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_ui():\n",
+    "    global stored_threshold, threshold_modifier\n",
+    "    remove_groups()\n",
+    "    display(threshold_modifier)\n",
+    "    \n",
+    "def delete_group(_):\n",
+    "    global removed_groups, group_data\n",
+    "    removed_groups.append(group_data[\"Group Data\"].iloc[0])\n",
+    "    update_ui()\n",
+    "def reset_removed(_):\n",
+    "    global removed_groups\n",
+    "    removed_groups = []\n",
+    "    update_ui()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delete_button = widgets.Button(description = \"Delete Group\")\n",
+    "delete_button.on_click(delete_group)\n",
+    "\n",
+    "reset_button = widgets.Button(description = \"Reset Deletions\")\n",
+    "reset_button.on_click(reset_removed)\n",
+    "data_flagging = widgets.HBox([delete_button, reset_button])\n",
+    "\n",
+    "data_interface = widgets.VBox([data_flagging, threshold_modifier])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabs = widgets.Tab(children = [data_interface, button, download_button])\n",
+    "\n",
+    "tabs.set_title(0, \"Threshold Selection\")\n",
+    "tabs.set_title(1, \"Photo Downloader\")\n",
+    "tabs.set_title(2, \"Data Download\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a73a4a173bd54210bb55d69be1e49575",
+       "model_id": "26f4d59fbe7d41acbafa9c380d469a06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +352,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-7d083f50-827e-4e7f-aadf-3be2af4bde4e\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-50ffbea2-839a-44dd-8a54-106a0b4d1c3c\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -291,16 +360,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "add_layer(m1)\n",
+    "m1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b47dc03991640cbb2c50b29751f3bcb",
+       "model_id": "9d3f860ebd6a49fab6e059c2f6e20606",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(interactive(children=(IntSlider(value=10, description='threshold', max=200), Output()), _dom_cla…"
+       "Tab(children=(VBox(children=(HBox(children=(Button(description='Delete Group', style=ButtonStyle()), Button(de…"
       ]
      },
      "metadata": {},
@@ -308,18 +392,7 @@
     }
    ],
    "source": [
-    "tabs = widgets.Tab(children = [threshold_modifier, button, download_button])\n",
-    "\n",
-    "tabs.set_title(0, \"Threshold Selection\")\n",
-    "tabs.set_title(1, \"Photo Downloader\")\n",
-    "tabs.set_title(2, \"Data Download\")\n",
-    "\n",
-    "\n",
-    "update_map()\n",
-    "\n",
-    "\n",
-    "display(map)\n",
-    "display(tabs)"
+    "tabs"
    ]
   },
   {
