Switch to Spatial DF Plotting
Previous method of creating a layer would result in crashing for large
numbers of groups (stemming from a low threshold). Utilizing the spatial
dataframe plot method resolves this.

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -85,7 +85,6 @@
     "        geojson_data, geometry=gpd.points_from_xy(geojson_data.longitude, geojson_data.latitude))\n",
     "    gdf.mosquitohabitatmapperComments.replace({r'[^\\x00-\\x7F]+':''}, regex=True, inplace=True)\n",
     "    groups_features = GeoAccessor.from_geodataframe(gdf)\n",
-    "    groups_features = groups_features[['latitude', 'longitude', 'mosquitohabitatmapperLarvaeCoun']]\n",
     "process_data(10)"
    ]
   },
@@ -108,8 +107,8 @@
     "    map_obj.basemap = 'dark-gray-vector'\n",
     "    try:\n",
     "        global groups_features\n",
-    "        groups_layer = groups_features.spatial.to_featurelayer(\"MHM Groups\")\n",
-    "        map_obj.add_layer(groups_layer)\n",
+    "        groups_features.spatial.plot(map_widget=map_obj, renderer_type='s', colors='Reds_r', outline_color='Reds', marker_size=10)\n",
+    "\n",
     "    except KeyError:\n",
     "        print(\"no such group exists\")\n",
     "    \n",
@@ -338,7 +337,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26f4d59fbe7d41acbafa9c380d469a06",
+       "model_id": "7999d7b486c34dc48df6869d5fcf892d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +351,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-50ffbea2-839a-44dd-8a54-106a0b4d1c3c\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-fd6f3d4f-ee44-4a0a-920f-143911a2f5b4\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -379,7 +378,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d3f860ebd6a49fab6e059c2f6e20606",
+       "model_id": "56ee08cedeaa4577ad4df19b301a50d0",
        "version_major": 2,
        "version_minor": 0
       },
