Setup Group Photo Classification
Setup classification infrastructure for determining how much a photos
vary within a certain group

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -197,7 +197,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "picture_data = pd.DataFrame()\n",
+    "selected_photo = \"\"\n",
+    "photo_category = \"\"\n",
+    "def categorize_photo(category):\n",
+    "    global photo_category\n",
+    "    photo_category = category\n",
+    "    \n",
+    "    \n",
+    "def add_observation(_):\n",
+    "    global picture_data, selected_photo, group_data, photo_category\n",
+    "    entry = {\n",
+    "        \"Filename\": [selected_photo],\n",
+    "        \"Group\" : [group_data[\"Group Data\"].iloc[0]],\n",
+    "        \"Category\": [photo_category]\n",
+    "    }\n",
+    "    picture_data = picture_data.append(pd.DataFrame.from_dict(entry), ignore_index = True)\n",
+    "       \n",
+    "    \n",
+    "def photo_obs_to_file(_):\n",
+    "    # removes any duplicates and stores last recorded observation\n",
+    "    global picture_data\n",
+    "    picture_data = picture_data.drop_duplicates(subset = [\"Filename\", \"Group\"], keep = \"last\")\n",
+    "    with out:\n",
+    "        clear_output()\n",
+    "        picture_data.to_csv(\"Picture_Data.csv\")\n",
+    "        print(\"Downloaded Picture data to file\")\n",
+    "categories = [\"Exactly the Same\", \"Same Object, Different Photo\", \"Completely Different\"]\n",
+    "photo_categorizer = interactive(categorize_photo, category = categories)\n",
+    "\n",
+    "add_observ_button = widgets.Button(description = \"Add Entry\")\n",
+    "add_observ_button.on_click(add_observation)\n",
+    "\n",
+    "\n",
+    "categorizer = widgets.HBox([photo_categorizer, add_observ_button])\n",
+    "\n",
+    "photo_to_file_button = widgets.Button(description = \"Save Data to File\")\n",
+    "photo_to_file_button.on_click(photo_obs_to_file)\n",
+    "photo_out = widgets.Output()\n",
+    "photo_to_file_button = widgets.VBox([photo_to_file_button, photo_out])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,6 +257,8 @@
     "\n",
     "def show_images(file):\n",
     "    try:\n",
+    "        global selected_photo\n",
+    "        selected_photo = file\n",
     "        display(Image(\"Images/\" + file))\n",
     "    except TypeError:\n",
     "        print(\"No Pictures to download\")\n",
@@ -258,13 +307,26 @@
     "        get_pictures(data[data[\"Group Name\"] == group_name])\n",
     "        print(' Finished Downloading!')\n",
     "        \n",
-    "        photo_displayer = interactive(show_images, file=os.listdir('Images/')) \n",
-    "        display(photo_displayer)"
+    "        photos = os.listdir('Images/')\n",
+    "        \n",
+    "        photo_displayer = widgets.VBox([categorizer, interactive(show_images, file=photos[1:])])\n",
+    "        \n",
+    "        \n",
+    "        try:\n",
+    "            global selected_photo\n",
+    "            selected_photo = photos[0]\n",
+    "            categorize_photo(\"Master Photo\")\n",
+    "            add_observation(None)\n",
+    "            display(Image(\"Images/\" + photos[0]))\n",
+    "            display(photo_displayer)\n",
+    "        except IndexError:\n",
+    "            display(\"No photos\")\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,12 +336,14 @@
     "# linking button and function together using a button's method\n",
     "button.on_click(download_photos)\n",
     "# displaying button and its output together\n",
-    "button = widgets.VBox([button,out])"
+    "button = widgets.VBox([button,out])\n",
+    "\n",
+    "photos_interface = widgets.VBox([photo_to_file_button, button])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +382,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabs = widgets.Tab(children = [data_interface, button, download_button])\n",
+    "tabs = widgets.Tab(children = [data_interface, photos_interface, download_button])\n",
     "\n",
     "tabs.set_title(0, \"Threshold Selection\")\n",
     "tabs.set_title(1, \"Photo Downloader\")\n",
@@ -331,18 +395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7999d7b486c34dc48df6869d5fcf892d",
+       "model_id": "0a0a1f1a86f14c0c8eb7c12f899a9444",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MapView(layout=Layout(height='400px', width='100%'))"
+       "MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=True)"
       ]
      },
      "metadata": {},
@@ -351,7 +415,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-fd6f3d4f-ee44-4a0a-920f-143911a2f5b4\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-64634792-ba8c-432b-89dd-8ec6fe1c726a\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -368,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -378,7 +442,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56ee08cedeaa4577ad4df19b301a50d0",
+       "model_id": "43d3242c4e1f45c4b8b006adda12e1be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,13 +457,6 @@
    "source": [
     "tabs"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
