Quick UI Update

--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
     "    # removes any duplicates and stores last recorded observation\n",
     "    global picture_data\n",
     "    picture_data = picture_data.drop_duplicates(subset = [\"Filename\", \"Group\"], keep = \"last\")\n",
-    "    with out:\n",
+    "    with photo_out:\n",
     "        clear_output()\n",
     "        picture_data.to_csv(\"Picture_Data.csv\")\n",
     "        print(\"Downloaded Picture data to file\")\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,14 +336,12 @@
     "# linking button and function together using a button's method\n",
     "button.on_click(download_photos)\n",
     "# displaying button and its output together\n",
-    "button = widgets.VBox([button,out])\n",
-    "\n",
-    "photos_interface = widgets.VBox([photo_to_file_button, button])"
+    "button = widgets.VBox([button,out])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,11 +380,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabs = widgets.Tab(children = [data_interface, photos_interface, download_button])\n",
+    "download_interface = widgets.VBox([download_button, photo_to_file_button])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tabs = widgets.Tab(children = [data_interface, button, download_interface])\n",
     "\n",
     "tabs.set_title(0, \"Threshold Selection\")\n",
     "tabs.set_title(1, \"Photo Downloader\")\n",
@@ -395,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 121,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -442,7 +449,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43d3242c4e1f45c4b8b006adda12e1be",
+       "model_id": "e38f8cdbe3c243a6a4bbd75a93dbd7be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -457,6 +464,13 @@
    "source": [
     "tabs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
