--- a/Groups.ipynb
+++ b/Groups.ipynb
@@ -4,35 +4,65 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter password:  ·········\n"
+     ]
+    }
+   ],
+   "source": [
+    "from arcgis.gis import GIS\n",
+    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\", username=\"Piphi5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
-    "from arcgis.features import FeatureLayer\n",
+    "from arcgis.features import FeatureLayer, GeoAccessor\n",
     "\n",
-    "mhm_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/MHM_2020/FeatureServer/0\"\n",
+    "    \n",
+    "groups_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/MHM_Group_Data/FeatureServer/0\"\n",
+    "mhm_url = \"https://services4.arcgis.com/feSRYIeirl5nUF92/arcgis/rest/services/GLOBE_Observer_MHM_Measurements_Updated_Daily_Public_View/FeatureServer/0\"\n",
     "\n",
-    "layer = FeatureLayer(mhm_url)\n",
+    "def get_data():\n",
+    "    def get_df(url):\n",
+    "        temp_layer = FeatureLayer(url)\n",
+    "        temp_df = GeoAccessor.from_layer(temp_layer)\n",
+    "        temp_df = temp_df.drop([\"SHAPE\", \"ObjectId\"], 1)\n",
+    "        return temp_df\n",
+    "    \n",
+    "    df = get_df(mhm_url)\n",
+    "    groups_df = get_df(groups_url)\n",
+    "    sorted_groups_df = groups_df.sort_values(\"measuredDate\", ascending=False).reset_index()\n",
+    "    latest_date = sorted_groups_df[\"measuredDate\"].loc[0]\n",
+    "    df = df[df[\"measuredDate\"] > latest_date].append(groups_df, ignore_index=True)\n",
+    "    return df\n",
     "\n",
-    "df = layer.query(where = \"protocol = 'mosquito_habitat_mapper'\").sdf\n",
-    "data = pd.DataFrame()\n",
+    "data = None\n",
     "removed_groups = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from arcgis.gis import GIS\n",
-    "gis = GIS(url=\"https://igestrategies.maps.arcgis.com\")"
+    "df = get_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,23 +104,21 @@
     "        new_df = temp.copy(True)\n",
     "        new_df[\"Group Data\"] = str(group)\n",
     "        new_df[\"Group Name\"] = str(group_num)\n",
-    "        \n",
+    "\n",
     "        group_num += 1\n",
     "        groups_data = groups_data.append(new_df, ignore_index = True)\n",
-    "    data = groups_data\n",
-    "    remove_groups()\n",
-    "    geojson_data = data.drop(columns = [\"SHAPE\"])\n",
     "\n",
-    "    gdf = gpd.GeoDataFrame(\n",
-    "        geojson_data, geometry=gpd.points_from_xy(geojson_data.longitude, geojson_data.latitude))\n",
-    "    gdf.mosquitohabitatmapperComments.replace({r'[^\\x00-\\x7F]+':''}, regex=True, inplace=True)\n",
-    "    groups_features = GeoAccessor.from_geodataframe(gdf)\n",
+    "    data = GeoAccessor.from_xy(groups_data, \"longitude\", \"latitude\")\n",
+    "    remove_groups()\n",
+    "    groups_features = data.copy(True)\n",
+    "\n",
+    "    groups_features.mosquitohabitatmapperComments.replace({r'[^\\x00-\\x7F]+':''}, regex=True, inplace=True)\n",
     "process_data(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,17 +201,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import OverwriteFS\n",
     "def download_groups(_):\n",
     "    with download_out:\n",
     "        global stored_threshold, data\n",
-    "        filename = f\"Groups-{stored_threshold}.csv\"\n",
+    "        filename = f\"MHM_Groups.csv\"\n",
+    "        item_id = \"3eff230387c045f79a70e40195961452\"\n",
+    "        item_name = \"MHM Group Data\"\n",
+    "        \n",
+    "        item = gis.content.get(item_id)\n",
+    "        \n",
     "        print(f\"Saving Groups CSV as {filename}\")\n",
     "        data.to_csv(filename)\n",
-    "        print(\"Finished saving file\")\n",
+    "        outcome = OverwriteFS.overwriteFeatureService(item, updateFile=filename, touchItems=True, verbose=True)\n",
+    "        print(f\"Finished saving file: {outcome}\")\n",
     "    \n",
     "download_button = widgets.Button(description='Download Data')\n",
     "download_out = widgets.Output()\n",
@@ -197,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +240,7 @@
     "import re\n",
     "import requests\n",
     "import sys\n",
-    "from IPython.display import Image\n",
+    "from PIL import Image\n",
     "\n",
     "\n",
     "def show_images(file):\n",
@@ -215,14 +250,15 @@
     "        print(\"No Pictures to download\")\n",
     "\n",
     "def download_picture(url, directory):\n",
+    "  \n",
     "    def get_picture(file_name):\n",
     "        downloaded_obj = requests.get(url, allow_redirects=True)\n",
     "        parent_dir = os.path.join(directory, file_name)\n",
     "        with open(parent_dir, \"wb\") as file:\n",
     "            file.write(downloaded_obj.content)\n",
-    "\n",
     "    if \"https://\" in url:\n",
     "        photo_id = re.search(r'(?<=\\d\\d\\d\\d\\/\\d\\d\\/\\d\\d\\/).*(?=\\/)', url).group(0)\n",
+    "        print(url)\n",
     "        file_name = f\"{photo_id}.jpg\".replace(\":\",\"-\")\n",
     "        get_picture(file_name)\n",
     "\n",
@@ -264,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,9 +328,16 @@
     "    global removed_groups, group_data\n",
     "    removed_groups.append(group_data[\"Group Data\"].iloc[0])\n",
     "    update_ui()\n",
-    "def reset_removed(_):\n",
+    "    \n",
+    "def undo_remove(_):\n",
     "    global removed_groups\n",
-    "    removed_groups = []\n",
+    "    removed_groups.pop()\n",
+    "    update_ui()\n",
+    "    \n",
+    "def update_local(_):\n",
+    "    global df, stored_threshold\n",
+    "    df = get_data()\n",
+    "    process_data(stored_threshold)\n",
     "    update_ui()\n",
     "    \n",
     "    "
@@ -302,23 +345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "delete_button = widgets.Button(description = \"Delete Group\")\n",
     "delete_button.on_click(delete_group)\n",
     "\n",
-    "reset_button = widgets.Button(description = \"Reset Deletions\")\n",
-    "reset_button.on_click(reset_removed)\n",
-    "data_flagging = widgets.HBox([delete_button, reset_button])\n",
+    "update_button = widgets.Button(description = \"Update From Sever\")\n",
+    "update_button.on_click(update_local)\n",
     "\n",
+    "undo_button = widgets.Button(description = \"Undo Deletion\")\n",
+    "undo_button.on_click(undo_remove)\n",
+    "\n",
+    "data_flagging = widgets.HBox([delete_button, undo_button, update_button])\n",
     "data_interface = widgets.VBox([data_flagging, threshold_modifier])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,18 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7999d7b486c34dc48df6869d5fcf892d",
+       "model_id": "8f17e905841549dc855e749a6f31097d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MapView(layout=Layout(height='400px', width='100%'))"
+       "MapView(jupyter_target='lab', layout=Layout(height='400px', width='100%'), ready=True)"
       ]
      },
      "metadata": {},
@@ -351,7 +397,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-fd6f3d4f-ee44-4a0a-920f-143911a2f5b4\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-713a1dc1-f079-4e39-9772-03918751ff67\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -368,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -378,7 +424,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56ee08cedeaa4577ad4df19b301a50d0",
+       "model_id": "2e048f7b92524df39fff20f1b41992e0",
        "version_major": 2,
        "version_minor": 0
       },
